--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
 </head>
 <body>
   <form name="publish">
-    <input type="text" name="message" maxlength="50"/>
+    <input type="text" name="message" maxlength="50" autocomplete="off"/>
     <input type="submit" value="Send"/>
   </form>
 
   <div id="messages"></div>
 
   <script>
+  /*
     let url = location.host == 'localhost' ?
       'ws://localhost:8080/ws' : location.host == 'javascript.local' ?
       `ws://javascript.local/article/websocket/chat/ws` : // интеграция для разработки с локальным сайтом
       `wss://javascript.info/article/websocket/chat/ws`; // боевая интеграция с javascript.info
+*/
+    let socket = new WebSocket('ws://localhost:8080/ws');
 
-    let socket = new WebSocket(url);
-    // отправка сообщения из формы
     document.forms.publish.onsubmit = function() {
       let outgoingMessage = this.message.value;
 
@@ -28,7 +29,6 @@
       return false;
     };
 
-    // прослушка входящих сообщений
     socket.onmessage = function(event) {
       let incomingMessage = event.data;
       showMessage(incomingMessage);
@@ -36,7 +36,6 @@
 
     socket.onclose = event => console.log(`Closed ${event.code}`);
 
-    // отображение информации в div#messages
     function showMessage(message) {
       let messageElem = document.createElement('div');
       messageElem.textContent = message;
